Fixed layout on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ footer::before {
    Inlined to avoid required HTTP connection: h5bp.com/r
    ========================================================================== */
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 980px) {
     html {
         background-color: inherit;
         padding: 0;
@@ -227,6 +227,9 @@ footer::before {
     body {
         width: 100%;
         margin: 0;
+    }
+    body > header, main, footer {
+        background: none;
     }
 }
 
